--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -74,24 +74,25 @@
 
 /*
    Author profile and links
-   ========================================================================== */
+   ==========================================================================
+*/
 
 .author__avatar {
   display: table-cell;
   vertical-align: top;
-  width: 36px;
-  // set width only, for non-square avatars
-  // height: 36px;
+  width: 175px;  // Set width for square avatars
+  height: 175px; // Ensure height matches width for a perfect circle
 
   @include breakpoint($large) {
     display: block;
-    width: auto;
-    height: auto;
+    width: 175px; // Keep width and height the same
+    height: 175px;
   }
 
   img {
-    max-width: 175px;
-    border-radius: 50%;
+    width: 100%;   // Ensure image takes up full width of container
+    height: auto;  // Maintain aspect ratio for the image
+    border-radius: 50%; // Makes the image a perfect circle
 
     @include breakpoint($large) {
       padding: 5px;
@@ -99,6 +100,7 @@
     }
   }
 }
+
 
 .author__content {
   display: table-cell;
